[ios] Implements accessibilityPerformEscape on UIRefresh collections.

Bug: 865044
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I9099ae71217f68eb624332debb8260faa067991d
Reviewed-on: https://chromium-review.googlesource.com/1145629
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577403}
Former-commit-id: 7a57a8953ba37cb2baf05aee0f7f2613468fe5fb