ios/chrome/browser/ui/reading_list/reading_list_table_view_controller.mm
@@ -868,4 +868,11 @@ ReadingListSelectionState GetSelectionStateForSelectedCounts(
                                        atPoint:location];
 }
 
+#pragma mark - Accessibility
+
+- (BOOL)accessibilityPerformEscape {
+  [self.delegate dismissReadingListListViewController:self];
+  return YES;
+}
+
 @end
